# hexapod

./: .bash_history  .container_bash_history  .gitignore  DOCUMENTATION.md  Dockerfile  Makefile  README.md  STRUCTURE.txt  _COMMANDS.md  _DOCUMENTATION.md  _STRUCTURE.md  commands.md  compose.yaml  documentation.md  installation.md  main_test_backup.cpp
Logs/: hexadrone_power_plot.m  log_test_1.txt  log_test_2.txt  power_27_04.csv
MODELS/: HEXADRONE.yml
RADIO/: radio.yml
Radiomaster/MODELS/: HEXA-SIM.yml  HEXADRONE.yml
install/: local_setup.sh  setup.sh
install/hexadrone_controller/share/hexadrone_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hexadrone_core/share/hexadrone_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hexadrone_description/share/hexadrone_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hexadrone_webots/share/hexadrone_webots/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
log/: latest_build
old-xehos/: lib.hpp  main.cpp
src/hexadrone_controller/: CMakeLists.txt  package.xml
src/hexadrone_controller/include/hexadrone_controller/: bridge_ops.hpp
src/hexadrone_controller/src/: teleop_node.cpp
src/hexadrone_core/: CMakeLists.txt  hexadrone_core  library.json  package.xml
src/hexadrone_core/include/hexadrone_core/: brain.hpp  gait_engine.hpp  kinematics.hpp  lib.hpp  state_machine.hpp
src/hexadrone_core/src/: brain.cpp  gait_engine.cpp  kinematics.cpp
src/hexadrone_description/: CMakeLists.txt  package.xml
src/hexadrone_description/assets/: base_link.part  base_link.stl  cover.part  cover.stl  lb_coxa.part  lb_coxa_servo.part  lb_femur.part  lb_femur_servo.part  lb_tibia.part  lb_tibia_servo.part  lb_tip.part  lf_coxa.part  lf_coxa.stl  lf_coxa_servo.part  lf_femur.part  lf_femur.stl  lf_femur_servo.part  lf_tibia.part  lf_tibia.stl  lf_tibia_servo.part  lf_tip.part  lf_tip.stl  lm_coxa.part  lm_coxa_servo.part  lm_femur.part  lm_femur_servo.part  lm_tibia.part  lm_tibia_servo.part  lm_tip.part  rb_coxa.part  rb_coxa.stl  rb_coxa_servo.part  rb_femur.part  rb_femur_servo.part  rb_tibia.part  rb_tibia.stl  rb_tibia_servo.part  rb_tip.part  rf__coxa_servo.part  rf_coxa.part  (+17 more)
src/hexadrone_description/config/: ros2_control.yaml
src/hexadrone_description/urdf/: robot.urdf
src/hexadrone_esp32/: .gitignore  platformio.ini
src/hexadrone_esp32/include/: config.h
src/hexadrone_esp32/lib/: hexadrone_core
src/hexadrone_esp32/src/: main.cpp
src/hexadrone_webots/: CMakeLists.txt  package.xml
src/hexadrone_webots/hexadrone_webots/: keyboard_plugin.py
src/hexadrone_webots/launch/: launch.py
src/hexadrone_webots/protos/: Ros2Supervisor.proto  robot.proto
src/hexadrone_webots/worlds/: .hexaworld.wbproj  hexaworld.wbt
(+219 files in other folders)
