<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexadrone_controller</name>
  <version>0.0.1</version>
  <description>ROS 2 Bridge for Hexadrone Core</description>
  <maintainer email="yehor.derehus@gmail.com">yehorderehus</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>hexadrone_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
