<package format="3">
  <name>hexadrone_core</name>
  <version>0.0.1</version>
  <description>Pure C++ Hexadrone Engine</description>
  <maintainer email="yehor.derehus@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
